<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/playback_header"
        app:icon="@drawable/ic_playback">

        <SeekBarPreference
            android:key="volume_slider"
            app:title="@string/title_volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>

        <ListPreference
            app:defaultValue="siri"
            app:entries="@array/voice_list_entries"
            app:entryValues="@array/voice_list_values"
            app:key="voice_list"
            app:title="@string/voice_list_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/other_header"
        app:icon="@drawable/ic_other_settings">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"
            app:summaryOff="@string/dark_mode_summary_off"
            app:summaryOn="@string/dark_mode_summary_on" />

    </PreferenceCategory>

</PreferenceScreen>